--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "svg-convert-test",
-  "version": "0.0.1",
-  "description": "Converts SVG images to compound path",
-  "main": "index.js",
-  "dependencies": {
-    "xmldom": "^0.1.19"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kostap13/svg-convert-test.git"
-  },
-  "keywords": [
-    "svg"
-  ],
-  "author": "Konstantin Latypov",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kostap13/svg-convert-test/issues"
-  },
-    "dependencies" : {
-        "xmldom"   :  "0.1.*",
-        "lodash-node" : "2.4.*"
+    "name": "svg-convert-test",
+    "version": "0.0.1",
+    "description": "Converts SVG images to compound path",
+    "main": "index.js",
+    "dependencies": {
+        "xmldom": "^0.1.19"
     },
-  "homepage": "https://github.com/kostap13/svg-convert-test"
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kostap13/svg-convert-test.git"
+    },
+    "keywords": [
+        "svg"
+    ],
+    "author": "Konstantin Latypov",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/kostap13/svg-convert-test/issues"
+    },
+    "dependencies": {
+        "xmldom": "~ 0.1.16",
+        "lodash": "~ 2.4.1"
+    },
+    "homepage": "https://github.com/kostap13/svg-convert-test"
 }
